kubernetes_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: mainlb
  namespace: wanderlust
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/subnets: subnet-97g3r2,subnet-8765rdfv,subnet-9876tr
  spec:
    ingressClasssName: alb       #Ingress ka type hai alb
    rules:
    - host: webapp.oceanofthings.shop
      htttp:
       paths:
         - path: /api
           pathType: Prefix
           backend:
            service:
              name: api
              port:
                number: 5000
          - path: /
           pathType: Prefix
           backend:
            service:
              name: frontend
              port:
                number: 5173
